[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Card.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Card" type="Control"]
margin_left = -84.0
margin_top = -135.0
margin_right = 84.0
margin_bottom = 135.0
rect_min_size = Vector2( 168, 270 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="ColorRect" parent="Panel/VBoxContainer"]
margin_right = 168.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer/Header/HBoxContainer"]
margin_right = 144.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Wink"
valign = 1
uppercase = true

[node name="EffectsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Header/HBoxContainer"]
margin_left = 148.0
margin_right = 148.0
margin_bottom = 26.0
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="Effect1Label" type="Label" parent="Panel/VBoxContainer/Header/HBoxContainer/EffectsContainer"]
visible = false
margin_right = 41.0
margin_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Gain 1"
align = 2
valign = 1

[node name="Effect2Label" type="Label" parent="Panel/VBoxContainer/Header/HBoxContainer/EffectsContainer"]
visible = false
margin_right = 40.0
margin_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Pool 2"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 168.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Panel/VBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0666667, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="ColorRect" parent="Panel/VBoxContainer"]
margin_top = 232.0
margin_right = 168.0
margin_bottom = 270.25
rect_min_size = Vector2( 0, 38.25 )
size_flags_horizontal = 3
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Footer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 3.0
margin_right = -10.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="Panel/VBoxContainer/Footer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 14.0
text = "Wink + Wink"
uppercase = true

[node name="ComboEffectsContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Footer/VBoxContainer"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="ComboEffect1Label" type="Label" parent="Panel/VBoxContainer/Footer/VBoxContainer/ComboEffectsContainer"]
visible = false
margin_left = 43.0
margin_right = 104.0
margin_bottom = 14.0
grow_horizontal = 2
text = "Convert 1"
align = 2
valign = 1

[node name="ComboEffect2Label" type="Label" parent="Panel/VBoxContainer/Footer/VBoxContainer/ComboEffectsContainer"]
visible = false
margin_left = 108.0
margin_right = 148.0
margin_bottom = 14.0
grow_horizontal = 2
size_flags_horizontal = 9
size_flags_vertical = 1
text = "Pool 2"
align = 2
valign = 1

[node name="ComboHeader" type="Label" parent="Panel/VBoxContainer/Footer"]
margin_left = 18.0
margin_top = -14.0
margin_right = 75.0
margin_bottom = -9.53674e-07
text = "Combo?"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
